<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/firText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="注册信息"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/phone_str"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/phone_number_label"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_phone_number_hint"
            android:inputType="phone"
            android:autofillHints="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/password_str"
            android:layout_width="62dp"
            android:layout_height="50dp"
            android:text="@string/password_label"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_password_hint"
            android:inputType="textPassword"
            android:autofillHints="password" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/sex_group"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/nan_but"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/nv_but"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/female" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading" />

        <CheckBox
            android:id="@+id/checkBoxSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sports" />

        <CheckBox
            android:id="@+id/checkBoxMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music" />
    </LinearLayout>

    <Spinner
        android:id="@+id/CitySpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#3F51B5"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>